# koharu-ml

./: .gitmodules  Cargo.toml  build.rs  gemini-env.Dockerfile
.devcontainer/: devcontainer.json
src/: init.rs  main.rs
src/core/: commands.rs  protocol.rs  views.rs
src/llm/: mod.rs  model.rs  paddleocr_vl.rs  prompt.rs
src/llm/providers/: chat_completions.rs  claude.rs  deepl.rs  deepseek.rs  gemini.rs  google_translate.rs  mod.rs  openai.rs  openai_compatible.rs
src/llm/safe/: context.rs  llama_backend.rs  llama_batch.rs  log.rs  mod.rs  model.rs  mtmd.rs  sampling.rs  timing.rs  token.rs  token_type.rs
src/llm/safe/context/: kv_cache.rs  params.rs  session.rs
src/llm/safe/context/params/: get_set.rs
src/llm/safe/gguf/: mod.rs  tests.rs
src/llm/safe/grammar/: tests.rs
src/llm/safe/model/: params.rs
src/llm/safe/model/params/: kv_overrides.rs
src/llm/safe/token/: data.rs  data_array.rs  logit_bias.rs
src/llm/sys/: mod.rs
src/ml/: loading.rs  mod.rs  probability_map.rs
src/ml/aot_inpainting/: mod.rs
src/ml/comic_text_bubble_detector/: mod.rs
src/ml/comic_text_detector/: mod.rs  postprocess.rs
src/ml/font_detector/: mod.rs
src/ml/lama/: mod.rs
src/ml/manga_ocr/: mod.rs  model.rs  tokenizer.rs
src/ml/manga_text_segmentation_2025/: mod.rs
src/ml/mit48px_ocr/: mod.rs
src/ml/paddleocr_vl/: mod.rs
src/ml/pp_doclayout_v3/: mod.rs  model.rs
src/ml/speech_bubble_segmentation/: mod.rs
